Hide scrollbar to prevent ui shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,16 @@ This styling is used for components/DonationForm
 Not used for project cards
 */
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: make scrollbar invisible */
+}
+
+/* Hide scrollbar for IE, Edge, and Firefox */
 html {
-  overflow-y: scroll
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 button.small {
